# mvp_puc_analise_dados

./: .gitignore  README.md  data_processing.py  dataset_anonymization.py  main.py  mvp_puc.ipynb  mvp_puc_lending_club.ipynb  pyproject.toml
