[project]
name = "mvp-puc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.0",
    "ipykernel>=6.29.5",
    "kaggle>=1.7.4.5",
    "lightgbm>=4.6.0",
    "mapclassify>=2.9.0",
    "matplotlib>=3.10.3",
    "nbconvert>=7.16.6",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "vega-datasets>=0.9.0",
]
